--- a/.github/workflows/tf-unit-tests.yml
+++ b/.github/workflows/tf-unit-tests.yml
@@ -2,6 +2,8 @@ name: 'Terraform Unit Tests'
 
 on:
   push:
+    paths:
+      - hashira-sentinel/**
 
 permissions:
   security-events: write # Needed to upload-sarif
