--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -29,6 +29,9 @@ jobs:
   terraform-plan:
     name: 'Terraform Plan'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 'hashira-sentinel'
     env:
       #this is needed since we are running terraform with read-only permissions
       ARM_SKIP_PROVIDER_REGISTRATION: true
