--- a/.github/workflows/tf-unit-tests.yml
+++ b/.github/workflows/tf-unit-tests.yml
@@ -14,6 +14,9 @@ jobs:
   terraform-unit-tests:
     name: 'Terraform Unit Tests'
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 'hashira-sentinel'
 
     steps:
       # Checkout the repository to the GitHub Actions runner
