--- a/.github/workflows/azure-auth.yml
+++ b/.github/workflows/azure-auth.yml
@@ -26,3 +26,59 @@ jobs:
           inlineScript: |
             Get-AzResourceGroup -Name "hashira-sentinel"
             # You can write your Azure PowerShell inline scripts here.
+            
+#
+#            name: Deploy to Azure
+#
+#            on:
+#              push:
+#                branches:
+#                  - main
+#
+#            jobs:
+#              deploy:
+#                runs-on: ubuntu-latest
+#
+#                env:
+#                  ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+#                  ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+#                  ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#                  ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+#
+#                steps:
+#                - name: Checkout code
+#                  uses: actions/checkout@v2
+#
+#                - name: Azure Login
+#                  uses: azure/login@v2
+#                  with:
+#                    creds: ${{ secrets.AZURE_CREDENTIALS }}
+#
+#                - name: Set up Terraform
+#                  uses: hashicorp/setup-terraform@v1
+#                  with:
+#                    terraform_version: 1.0.0
+#
+#                - name: Terraform Init
+#                  run: terraform init
+#                  env:
+#                    ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+#                    ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+#                    ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#                    ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+#
+#                - name: Terraform Plan
+#                  run: terraform plan
+#                  env:
+#                    ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+#                    ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+#                    ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#                    ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
+#
+#                - name: Terraform Apply
+#                  run: terraform apply -auto-approve
+#                  env:
+#                    ARM_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
+#                    ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
+#                    ARM_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+#                    ARM_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}
