--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,6 +22,7 @@ permissions:
 #These environment variables are used by the terraform azure provider to setup OIDD authenticate.
 env:
   ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+  ARM_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
   ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
 
@@ -45,9 +46,10 @@ jobs:
 
       # azure/login GitHub Action allows you to authenticate with Azure using a service principal
       - name: Azure Login
-        uses: azure/login@v1
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+#          enable-AzPSSession: true
 
       # Install the latest version of the Terraform CLI
       - name: Setup Terraform
