--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -85,12 +85,12 @@ jobs:
             exit 0
           fi
 
-#      # Save plan to artifacts
-#      - name: Publish Terraform Plan
-#        uses: actions/upload-artifact@v4
-#        with:
-#          name: tfplan
-#          path: tfplan
+      # Save plan to artifacts
+      - name: Publish Terraform Plan
+        uses: actions/upload-artifact@v4
+        with:
+          name: tfplan
+          path: tfplan
 
       # Create string output of Terraform Plan
       - name: Create String Output
@@ -116,49 +116,33 @@ jobs:
         run: |
           echo "$SUMMARY" >> $GITHUB_STEP_SUMMARY
 
-#      # If this is a PR post the changes
-#      - name: Push Terraform Output to PR
-#        if: github.ref != 'refs/heads/main'
-#        uses: actions/github-script@v7
-#        env:
-#          SUMMARY: "${{ steps.tf-plan-string.outputs.summary }}"
-#        with:
-#          github-token: ${{ secrets.GITHUB_TOKEN }}
-#          script: |
-#            const body = `${process.env.SUMMARY}`;
-#            github.rest.issues.createComment({
-#                issue_number: context.issue.number,
-#                owner: context.repo.owner,
-#                repo: context.repo.repo,
-#                body: body
-#            })
 
-#  terraform-apply:
-#    name: 'Terraform Apply'
-#    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
-#    runs-on: ubuntu-latest
-#    environment: production
-#    needs: [terraform-plan]
-#
-#    steps:
-#      # Checkout the repository to the GitHub Actions runner
-#      - name: Checkout
-#        uses: actions/checkout@v4
-#
-#      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-#      - name: Setup Terraform
-#        uses: hashicorp/setup-terraform@v3
-#
-#      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-#      - name: Terraform Init
-#        run: terraform init
-#
-#      # Download saved plan from artifacts
-#      - name: Download Terraform Plan
-#        uses: actions/download-artifact@v4
-#        with:
-#          name: tfplan
-#
-#      # Terraform Apply
-#      - name: Terraform Apply
-#        run: terraform apply -auto-approve tfplan
+  terraform-apply:
+    name: 'Terraform Apply'
+    if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
+    runs-on: ubuntu-latest
+    environment: production
+    needs: [terraform-plan]
+
+    steps:
+      # Checkout the repository to the GitHub Actions runner
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+      - name: Terraform Init
+        run: terraform init
+
+      # Download saved plan from artifacts
+      - name: Download Terraform Plan
+        uses: actions/download-artifact@v4
+        with:
+          name: tfplan
+
+      # Terraform Apply
+      - name: Terraform Apply
+        run: terraform apply -auto-approve tfplan
