--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -121,6 +121,9 @@ jobs:
     name: 'Terraform Apply'
     if: github.ref == 'refs/heads/main' && needs.terraform-plan.outputs.tfplanExitCode == 2
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: 'hashira-sentinel'
     environment: production
     needs: [terraform-plan]
 
@@ -133,9 +136,9 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
-      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-      - name: Terraform Init
-        run: terraform init
+#      # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
+#      - name: Terraform Init
+#        run: terraform init
 
       # Download saved plan from artifacts
       - name: Download Terraform Plan
