--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -145,6 +145,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: tfplan
+          path: hashira-sentinel/tfplan
 
       # Terraform Apply
       - name: Terraform Apply
